--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "debug": "^1.0.4",
     "jade": "^1.5.0",
     "serve-favicon": "^2.0.1",
-    "mongoose": "^3.8.15"
+    "mongoose": "^3.8.15",
+    "gm": "^1.16.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
