--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "jade": "^1.5.0",
     "serve-favicon": "^2.0.1",
     "mongoose": "^3.8.15",
-    "gm": "^1.16.0"
+    "gm": "^1.16.0",
+    "aws-sdk": "*",
+    "mime": "^1.2.11"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
